--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <h2>CERTIFY YOUR BUILDING AS A DIGITAL TWIN TOKEN (DTT®)</h2>
             <h1>The Digital Twin Token is a unique digital asset backed by property data. Magma combines your building's components and systems essential information into a DTT®.</h1>
         </div>
+        <div id="page3">
+            <canvas></canvas>
+        </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js" integrity="sha512-Ic9xkERjyZ1xgJ5svx3y0u3xrvfT/uPkV99LBwe68xjy/mGtO+4eURHZBW2xW4SZbFrF1Tf090XqB+EVgXnVjw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
