--- a/index.html
+++ b/index.html
@@ -117,7 +117,12 @@
 
                 </div>
             </div>
-          
+        </div>
+        <div id="page12">
+            <div class="page12-inner">
+                <h1>Featured In</h1>
+                <p>Thrilled to have been featured in several prominent media <br> outlets and leading professionals across the world's best <br> real estate and web3 institutions.</p>
+            </div>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
